@@ -83,6 +83,13 @@ if test "x$enable_ieee8021q" = "xyes"; then
    AC_DEFINE(ENABLE_IEEE8021Q,1,[Define to enable Chilli IEEE 802.1Q])
 fi
 
+AC_ARG_ENABLE(largelimits, [AC_HELP_STRING([--enable-largelimits],[Enable larger limits for use with non-embedded systems])], 
+  enable_largelimits=$enableval, enable_largelimits=no)
+
+if test "x$enable_largelimits" = "xyes"; then
+   AC_DEFINE(ENABLE_LARGELIMITS,1,[Enable larger limits for use with non-embedded systems])
+fi
+
 AC_ARG_WITH([openssl],
  [AS_HELP_STRING([--with-openssl], [enable support for openssl])],[],[with_openssl=no])
 
